# web-reader

./: Cargo.toml  build.rs
i18n/en/: cosmic_app_template.ftl
src/: app.rs  main.rs
src/app/: utils.rs
src/app/context/: about_context.rs  book_context.rs  mod.rs  settings_context.rs
src/app/pages/: explore.rs  history.rs  library.rs  mod.rs  page.rs  reading.rs
src/core/: book.rs  chapter.rs  data.rs  mod.rs  source.rs  widget.rs
src/core/source/: mod.rs  royalroad.rs
