[package]
name = "cosmic-app-template"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
async-trait = "0.1.81"
bytes = "1.6.1"
dirs = "5.0.1"
fuzzy-matcher = "0.3.7"
i18n-embed-fl = "0.8"
itertools = "0.13.0"
once_cell = "1.19.0"
open = "5.1.3"
reqwest = { version = "0.12.5", features = ["blocking"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
rust-embed = "8.3.0"
scraper = "0.19.0"
tokio = { version = "1.37.0", features = ["full"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["dbus-config", "tokio", "winit", "wgpu"]

[dependencies.i18n-embed]
version = "0.14"
features = ["fluent-system", "desktop-requester"]

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }
